--- a/Views/index.ejs
+++ b/Views/index.ejs
@@ -6,5 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <ul class="projects">
+      <!-- Loop through quotes -->
+      <% for(var i = 0; i < projects.length; i++) {%>
+      <li class="project">
+        <!-- Output name from the iterated quote object -->
+        <span><%= projects[i].title %></span>:
+        <!-- Output quote from the iterated quote object -->
+        <span><%= projects[i].description %></span>
+      </li>
+      <% } %>
+    </ul>
+  </body>
 </html>
