added modal popup windows for add, edit, remove

--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,6 @@
-body {
+/* body {
   text-indent: 20px;
-}
+} */
 
 #nav {
   height: 80px;
@@ -31,7 +31,7 @@ body {
 
 #buttons_row {
   height: 60px;
-  line-height: 60px;
+  margin-top: 20px;
   word-spacing: 10px;
 }
 
@@ -98,4 +98,26 @@ body {
 
 #task_container {
   justify-content: center;
+}
+
+.modal-body {
+  text-align: left;
+  word-spacing: normal;
+}
+
+.form-text {
+  margin-bottom: 0rem;
+  margin-top: 0rem;
+  padding: 0rem;
+}
+
+.form-label {
+  margin-bottom: 0rem;
+  margin-top: 0rem;
+}
+
+.mb3 {
+  margin-top: 0rem;
+  margin-bottom: 0rem;
+  padding: 0rem;
 }
