--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,8 @@
-/* body {
+#app_name,
+#project_name_row,
+#add_button {
   text-indent: 20px;
-} */
-
+}
 #nav {
   height: 80px;
   line-height: 80px;
@@ -47,6 +48,7 @@
 #main_container {
   height: 100vh;
   padding-top: 30px;
+  text-indent: 20px;
 }
 
 .left_nav_item {
@@ -109,6 +111,7 @@
   margin-bottom: 0rem;
   margin-top: 0rem;
   padding: 0rem;
+  text-indent: initial;
 }
 
 .form-label {
@@ -120,4 +123,8 @@
   margin-top: 0rem;
   margin-bottom: 0rem;
   padding: 0rem;
+}
+
+.text-indent-initial {
+  text-indent: -20px;
 }
