upd link to style.css, created modal_project.html

--- a/Views/about.html
+++ b/Views/about.html
@@ -1,20 +1,26 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
     <title>About</title>
-</head>
-<body>
-<nav>
-    <a href="home.html">Home</a>
-    <a href="application.html">Application</a>
-</nav>
-<section>
-    <h1>About To-Do's</h1>
-<p id="about_page">Insert information about functionality and main features here!</p>
-</section>
-</body>
+    <link rel="stylesheet" href="/style.css" />
+  </head>
+  <body>
+    <nav>
+      <a href="home.html">Home</a>
+      <a href="application.html">Application</a>
+    </nav>
+    <section>
+      <h1>About To-Do's</h1>
+      <p id="about_page">
+        Insert information about functionality and main features here!
+      </p>
+    </section>
+  </body>
 </html>
