--- a/Views/calendar.ejs
+++ b/Views/calendar.ejs
@@ -15,7 +15,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
-    <link rel="stylesheet" href="../Style/style.css" />
+    <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
     <div class="row" id="nav">
