--- a/Views/home.html
+++ b/Views/home.html
@@ -6,6 +6,7 @@
     <!-- Filler link for stylesheet -->
     <!--<link rel="stylesheet" href="style.css"> -->
     <title>Homepage</title>
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
 
