--- a/Views/tasks.ejs
+++ b/Views/tasks.ejs
@@ -45,7 +45,7 @@
 
     <div class="row">
       <div class="col-3" id="left_side_nav">
-        <p class="left_nav_items"><a href="project.ejs">Projects</a></p>
+        <p class="left_nav_items"><a href="projects.ejs">Projects</a></p>
         <p class="left_nav_items"><a href="tasks.ejs">Tasks</a></p>
         <p class="left_nav_items"><a href="calendar.ejs">Calendar</a></p>
         <p class="left_nav_items"><a href="recycle_bin.ejs">Recycle bin</a></p>
@@ -53,7 +53,49 @@
 
       <div class="col-9" id="main_container"></div>
     </div>
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top navbar-"
+         style="height: 35px">
+      <a
+              href="#"
+              class ="navbar-brand mb-0 h1">
+        <img
+                class="d-inline-block align-top"
+                src="https://media.istockphoto.com/vectors/check-vector-id871478670?k=20&m=871478670&s=612x612&w=0&h=qh3cQ0BOokeBWiJQp6fvjX-JpIIimTtAOkwe_Yt0y6k="
+                alt="picture of checkmark"
+                width="50" height="30" />
+        TODO
+      </a>
+      <button class="navbar-toggler"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbar-nav"
+              class="navbar-toggler"
+              aria-controls="navbar-nav"
+              aria-expanded="false"
+              aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
 
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbar-nav">
+        <ul class="navbar-nav">
+          <!-- link for home -->
+          <li class="nav-item active">
+            <a class="nav-link active" href="./Views/home.html">Home</a>
+          </li>
+
+          <!-- link for about -->
+          <li class="nav-item active">
+            <a class="nav-link active" href="./Views/about.html">About</a>
+          </li>
+
+          <!-- link for login
+          <li class="nav-item active">
+              <a class="nav-link active" href="#">Login</a>
+          </li> -->
+        </ul>
+      </div>
+    </nav>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
