--- a/Views/projects.ejs
+++ b/Views/projects.ejs
@@ -1,49 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TODO Project Manager</title>
     <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
-            crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
     />
     <link
-            rel="stylesheet"
-            href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
-
     <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
     <div class="row" id="nav">
       <div class="col-2" id="app_name">
         <p>TODO_APP</p>
-    </div>
-    <div class="col-10" id="nav_item">
+      </div>
+      <div class="col-10" id="nav_item">
         <p class="nav_item"><a href="home.html">Home</a></p>
         <p class="nav_item"><a href="about.html">About</a></p>
         <p class="nav_item"><a href="projects.ejs">Application</a></p>
+      </div>
     </div>
-</div>
 
-<div class="row" id="buttons_row">
-    <div class="col-6">
+    <div class="row" id="buttons_row">
+      <div class="col-6">
         <button class="btn btn-dark btn_create_project">Create project</button>
-    </div>
-    <div class="col-6" id="edit_remove_btns">
+      </div>
+      <div class="col-6" id="edit_remove_btns">
         <button class="btn btn-warning btn_edit">Edit</button>
         <button class="btn btn-danger btn_remove">Remove</button>
+      </div>
     </div>
-</div>
 
-<div class="row" id="project_name_row">
-    <div class="col-12">Project name</div>
-</div>
-
+    <div class="row" id="project_name_row">
+      <div class="col-12">Project name</div>
+    </div>
 
     <div class="row">
       <div class="col-3" id="left_side_nav">
@@ -51,75 +49,51 @@
         <p class="left_nav_items"><a href="tasks">Tasks</a></p>
         <p class="left_nav_items"><a href="calendar.ejs">Calendar</a></p>
         <p class="left_nav_items"><a href="recycle_bin.ejs">Recycle bin</a></p>
-    </div>
-
-    <div class="col-9" id="main_container"></div>
-</div>
-
-<nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top navbar-"
-     style="height: 35px">
-    <a
-            href="#"
-            class="navbar-brand mb-0 h1">
-        <img
-                class="d-inline-block align-top"
-                src="https://media.istockphoto.com/vectors/check-vector-id871478670?k=20&m=871478670&s=612x612&w=0&h=qh3cQ0BOokeBWiJQp6fvjX-JpIIimTtAOkwe_Yt0y6k="
-                alt="picture of checkmark"
-                width="50" height="30"/>
-        TODO
-    </a>
-    <button class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbar-nav"
-            class="navbar-toggler"
-            aria-controls="navbar-nav"
-            aria-expanded="false"
-            aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbar-nav">
-        <ul class="navbar-nav">
-            <!-- link for home -->
-            <li class="nav-item active">
-                <a class="nav-link active" href="./Views/home.html">Home</a>
-            </li>
-
-            <!-- link for about -->
-            <li class="nav-item active">
-                <a class="nav-link active" href="./Views/about.html">About</a>
-            </li>
-
-
-            <!-- link for login
-            <li class="nav-item active">
-                <a class="nav-link active" href="#">Login</a>
-            </li> -->
-        </ul>
+      </div>
 
       <div class="col-9" id="main_container">
         <% for(var i = 0; i < projects.length; i++) {%>
         <div class="card" style="width: 18rem">
           <div class="card-body">
+            <!-- Example split danger button -->
+            <div class="btn-group">
+              <button type="button" class="btn btn-danger"></button>
+              <button
+                type="button"
+                class="btn btn-danger dropdown-toggle dropdown-toggle-split"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                <span class="visually-hidden">Toggle Dropdown</span>
+              </button>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#"></a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </li>
+                <li><hr class="dropdown-divider" /></li>
+                <li><a class="dropdown-item" href="#">Separated link</a></li>
+              </ul>
+            </div>
             <h5 class="card-title"><%= projects[i].title %></h5>
             <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
             <p class="card-text"><%= projects[i].description %></p>
-            <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a>
+            <a
+              href="<%= `/tasks/project/${projects[i]._id}` %>"
+              class="card-link"
+              >See Tasks</a
+            >
           </div>
         </div>
         <% } %>
       </div>
-
     </div>
-</nav>
 
-<script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-        crossorigin="anonymous"
-></script>
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
