--- a/Views/tasks.ejs
+++ b/Views/tasks.ejs
@@ -31,7 +31,110 @@
 
     <div class="row" id="buttons_row">
       <div class="col-6">
-        <button class="btn btn-dark btn_add_task">Add task</button>
+        <button
+          class="btn btn-dark"
+          data-bs-toggle="modal"
+          data-bs-target="#add_btn_modal"
+        >
+          Add task
+        </button>
+        <div
+          class="modal fade"
+          id="add_btn_modal"
+          tabindex="-1"
+          aria-labelledby="add_modal_label"
+          aria-hidden="true"
+        >
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="add_modal_label">Add</h5>
+                <button
+                  type="button"
+                  class="btn-close"
+                  data-bs-dismiss="modal"
+                  aria-label="Close"
+                ></button>
+              </div>
+              <div class="modal-body">
+                <form
+                  id="add_task"
+                  action="<%= `/tasks/addtask/` %>"
+                  method="POST"
+                >
+                  <div class="mb-3">
+                    <label for="input_task_name" class="form-label"
+                      >Task name:</label
+                    >
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="input_task_name"
+                      aria-describedby="task_name_help"
+                    />
+                    <div id="task_name_help" class="form-text">
+                      Please enter task name
+                    </div>
+                  </div>
+                  <div class="mb-3">
+                    <label for="input_task_date" class="form-label"
+                      >Date:</label
+                    >
+                    <input
+                      type="date"
+                      class="form-control"
+                      id="input_task_date"
+                      aria-describedby="task_date_help"
+                    />
+                    <div id="task_date_help" class="form-text">
+                      Please enter task date
+                    </div>
+                  </div>
+                  <div class="mb-3">
+                    <label for="input_task_assignment" class="form-label"
+                      >Assigned to:</label
+                    >
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="input_task_assignment"
+                      aria-describedby="task_assignment_help"
+                    />
+                    <div id="task_assignment_help" class="form-text">
+                      Task assigned to:
+                    </div>
+                  </div>
+                  <div class="mb-3">
+                    <label for="input_task_description" class="form-label"
+                      >Task Description:</label
+                    >
+                    <textarea
+                      rows="10"
+                      cols="20"
+                      type="text"
+                      class="form-control"
+                      id="input_task_description"
+                      aria-describedby="task_description_help"
+                    ></textarea>
+                    <div id="task_description_help" class="form-text">
+                      Please enter task description
+                    </div>
+                  </div>
+                  <div class="modal-footer">
+                    <button
+                      type="button"
+                      class="btn btn-secondary"
+                      data-bs-dismiss="modal"
+                    >
+                      Cancel
+                    </button>
+                    <input type="submit" class="btn btn-primary" value="Add" />
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="col-6" id="edit_remove_btns">
         <button class="btn btn-warning btn_edit">Edit</button>
@@ -45,66 +148,89 @@
 
     <div class="row">
       <div class="col-3" id="left_side_nav">
+        <p class="left_nav_items"><a href="/projects">Projects</a></p>
+        <p class="left_nav_items"><a href="/tasks">Tasks</a></p>
 
-        <p class="left_nav_items"><a href="projects">Projects</a></p>
-        <p class="left_nav_items"><a href="tasks">Tasks</a></p>
-
-        <p class="left_nav_items"><a href="calendar.ejs">Calendar</a></p>
-        <p class="left_nav_items"><a href="recycle_bin.ejs">Recycle bin</a></p>
+        <p class="left_nav_items"><a href="/calendar">Calendar</a></p>
+        <p class="left_nav_items"><a href="/recycle_bin">Recycle bin</a></p>
       </div>
-
       <div class="col-9" id="main_container_tasks">
         <div class="container text-center">
           <div class="row align-items-start">
-            <div class="col">
-              One of three columns
-              <div class="card w-75">
-                <div class="card-body">
-                  <p class="card-text">
-                    With supporting text below as a natural lead-in to
-                    additional content.
-                  </p>
+            <div class="col card">
+              <h5 class="card-header">To do</h5>
+              <div class="card-body">
+                <!-- The task card to view-->
+                <% for(var i = 0; i < tasks.length; i++) {%> <%
+                if(tasks[i].status === 'todo') { %>
+                <div class="card todo-status">
+                  <h5 class="card-header"><%= tasks[i].title %></h5>
+                  <div class="card-body">
+                    <p class="card-text"><%= tasks[i].description %></p>
+                  </div>
                 </div>
+                <% } %> <% } %>
               </div>
             </div>
-            <div class="col">One of three columns</div>
-            <div class="col">One of three columns</div>
-          </div>
-          <div class="row align-items-center">
-            <div class="col">One of three columns</div>
-            <div class="col">One of three columns</div>
-            <div class="col">One of three columns</div>
-          </div>
-          <div class="row align-items-end">
-            <div class="col">One of three columns</div>
-            <div class="col">One of three columns</div>
-            <div class="col">One of three columns</div>
+            <div class="col card">
+              <h5 class="card-header">In Progress</h5>
+              <div class="card-body">
+                <!-- The task card to view-->
+                <% for(var i = 0; i < tasks.length; i++) {%> <%
+                if(tasks[i].status === 'inprogress') { %>
+                <div class="card todo-status">
+                  <h5 class="card-header"><%= tasks[i].title %></h5>
+                  <div class="card-body">
+                    <p class="card-text"><%= tasks[i].description %></p>
+                  </div>
+                </div>
+                <% } %> <% } %>
+              </div>
+            </div>
+            <div class="col card">
+              <h5 class="card-header">Done</h5>
+              <div class="card-body">
+                <!-- The task card to view, check for which project sent it here-->
+                <% for(var i = 0; i < tasks.length; i++) {%> <%
+                if(tasks[i].status === 'done') { %>
+                <div class="card todo-status">
+                  <h5 class="card-header"><%= tasks[i].title %></h5>
+                  <div class="card-body">
+                    <p class="card-text"><%= tasks[i].description %></p>
+                  </div>
+                </div>
+                <% } %> <% } %>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top navbar-"
-         style="height: 35px">
-      <a
-              href="#"
-              class ="navbar-brand mb-0 h1">
+    <nav
+      class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top navbar-"
+      style="height: 35px"
+    >
+      <a href="#" class="navbar-brand mb-0 h1">
         <img
-                class="d-inline-block align-top"
-                src="https://media.istockphoto.com/vectors/check-vector-id871478670?k=20&m=871478670&s=612x612&w=0&h=qh3cQ0BOokeBWiJQp6fvjX-JpIIimTtAOkwe_Yt0y6k="
-                alt="picture of checkmark"
-                width="50" height="30" />
+          class="d-inline-block align-top"
+          src="https://media.istockphoto.com/vectors/check-vector-id871478670?k=20&m=871478670&s=612x612&w=0&h=qh3cQ0BOokeBWiJQp6fvjX-JpIIimTtAOkwe_Yt0y6k="
+          alt="picture of checkmark"
+          width="50"
+          height="30"
+        />
         TODO
       </a>
-      <button class="navbar-toggler"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#navbar-nav"
-              class="navbar-toggler"
-              aria-controls="navbar-nav"
-              aria-expanded="false"
-              aria-label="Toggle navigation">
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbar-nav"
+        class="navbar-toggler"
+        aria-controls="navbar-nav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
         <span class="navbar-toggler-icon"></span>
-
       </button>
 
       <div class="collapse navbar-collapse" id="navbar-nav">
