--- a/Views/projects.ejs
+++ b/Views/projects.ejs
@@ -47,10 +47,10 @@
 
     <div class="row">
       <div class="col-3" id="left_side_nav">
-        <p class="left_nav_items"><a href="projects">Projects</a></p>
-        <p class="left_nav_items"><a href="tasks">Tasks</a></p>
-        <p class="left_nav_items"><a href="calendar.ejs">Calendar</a></p>
-        <p class="left_nav_items"><a href="recycle_bin.ejs">Recycle bin</a></p>
+        <p class="left_nav_items"><a href="/projects">Projects</a></p>
+        <p class="left_nav_items"><a href="/tasks">Tasks</a></p>
+        <p class="left_nav_items"><a href="/calendar">Calendar</a></p>
+        <p class="left_nav_items"><a href="/recycle_bin">Recycle bin</a></p>
     </div>
 
     <div class="col-9" id="main_container"></div>
