--- a/Views/about.html
+++ b/Views/about.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
+<head>
+    <meta charset="UTF-8"/>
     <meta
-      name="viewport"
-      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+            name="viewport"
+            content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
 
     <title>About</title>
+    <link
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+        crossorigin="anonymous"/>
+    <link
+        rel="stylesheet"
+        href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
+    <link rel="stylesheet" href="/style.css"/>
 
 </head>
 <body>
-<nav>
-    //static references to home and application pages
-    <a href="home.html">Home</a>
-    <a href="application.html">Application</a>
-</nav>
+
 <section>
     <h1>About To-Do's</h1>
     <p id="about_page">Insert information about functionality and main features here!</p>
@@ -49,36 +52,16 @@
         <ul class="navbar-nav">
             <!-- link for home -->
             <li class="nav-item active">
-                <a class="nav-link active" href="./Views/home.html">Home</a>
+                <a class="nav-link active" href="home.html">Home</a>
             </li>
 
             <!-- link for about -->
             <li class="nav-item active">
                 <a class="nav-link active" href="./Views/about.html">About</a>
             </li>
-
-            <!-- link for login
-            <li class="nav-item active">
-                <a class="nav-link active" href="#">Login</a>
-            </li> -->
         </ul>
     </div>
 </nav>
 </body>
-</html>
-    <link rel="stylesheet" href="/style.css" />
-  </head>
-  <body>
-    <nav>
-      <a href="home.html">Home</a>
-      <a href="application.html">Application</a>
-    </nav>
-    <section>
-      <h1>About To-Do's</h1>
-      <p id="about_page">
-        Insert information about functionality and main features here!
-      </p>
-    </section>
-  </body>
 </html>
 
