--- a/Views/home.html
+++ b/Views/home.html
@@ -6,7 +6,17 @@
     <!-- Filler link for stylesheet -->
     <!--<link rel="stylesheet" href="style.css"> -->
     <title>Homepage</title>
-    <link rel="stylesheet" href="/style.css">
+    <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+            crossorigin="anonymous"
+    />
+    <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
+    <link rel="stylesheet" href="/style.css" />
 </head>
 <body>
 
@@ -79,12 +89,12 @@
         <ul class="navbar-nav">
             <!-- link for home -->
             <li class="nav-item active">
-                <a class="nav-link active" href="./Views/home.html">Home</a>
+                <a class="nav-link active" href="#">Home</a>
             </li>
 
             <!-- link for about -->
             <li class="nav-item active">
-                <a class="nav-link active" href="./Views/about.html">About</a>
+                <a class="nav-link active" href="about.html">About</a>
             </li>
 
             <!-- link for login
