added recycle bin delete implementation

--- a/public/style.css
+++ b/public/style.css
@@ -1,305 +1,307 @@
 :root {
-  --color-primary: rgb(47, 129, 213);
-  --color-danger: rgb(230, 110, 91);
-  --color-success: rgb(42, 124, 80);
-  --color-warning: rgb(225, 56, 60);
-  --color-white: rgb(238, 245, 245);
-  --color-info-dark: rgb(52, 60, 60);
-  --color-info-light: rgb(224, 240, 241);
-  --color-dark: rgb(62, 67, 76);
-  --color-light: rgba(132, 139, 200, 0.18);
-  --color-primary-variant: rgb(130, 56, 242);
-  --color-dark-variant: rgb(54, 8, 124);
-  --color-background: rgb(214, 222, 225);
+	--color-primary: rgb(47, 129, 213);
+	--color-danger: rgb(230, 110, 91);
+	--color-success: rgb(42, 124, 80);
+	--color-warning: rgb(225, 56, 60);
+	--color-white: rgb(238, 245, 245);
+	--color-info-dark: rgb(52, 60, 60);
+	--color-info-light: rgb(224, 240, 241);
+	--color-dark: rgb(62, 67, 76);
+	--color-light: rgba(132, 139, 200, 0.18);
+	--color-primary-variant: rgb(130, 56, 242);
+	--color-dark-variant: rgb(54, 8, 124);
+	--color-background: rgb(214, 222, 225);
 
-  --card-border-radius: 2rem;
-  --border-radius-1: 0.4rem;
-  --border-radius-2: 0.8rem;
-  --border-radius-3: 1.2rem;
+	--card-border-radius: 2rem;
+	--border-radius-1: 0.4rem;
+	--border-radius-2: 0.8rem;
+	--border-radius-3: 1.2rem;
 
-  --card-padding: 0.1rem;
-  --padding-1: 1.2rem;
+	--card-padding: 0.1rem;
+	--padding-1: 1.2rem;
 
-  --box-shadow: 0 2rem 3rem var(--color-light);
+	--box-shadow: 0 2rem 3rem var(--color-light);
 }
 
 * {
-  margin: 0;
-  padding: 0;
-  outline: 0;
-  appearance: none;
-  border: 0;
-  text-decoration: none;
-  list-style: none;
-  box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	outline: 0;
+	appearance: none;
+	border: 0;
+	text-decoration: none;
+	list-style: none;
+	box-sizing: border-box;
 }
 
 html {
-  font-size: 14px;
+	font-size: 14px;
 }
 
 #app_name,
 #project_name_row,
 #add_button {
-  text-indent: 20px;
+	text-indent: 20px;
 }
 #nav {
-  height: 80px;
-  line-height: 80px;
-  background-color: royalblue;
-  color: white;
+	height: 80px;
+	line-height: 80px;
+	background-color: royalblue;
+	color: white;
 }
 
 .nav_item {
-  display: inline;
+	display: inline;
 }
 
 .nav_item a:link {
-  color: white;
+	color: white;
 }
 .nav_item a:hover {
-  font-weight: bold;
+	font-weight: bold;
 }
 
 .nav_item a:active {
-  font-weight: bold;
+	font-weight: bold;
 }
 
 #nav_item {
-  text-align: right;
-  word-spacing: 10px;
+	text-align: right;
+	word-spacing: 10px;
 }
 
 #buttons_row {
-  height: 60px;
-  margin-top: 20px;
-  word-spacing: 10px;
+	height: 60px;
+	margin-top: 20px;
+	word-spacing: 10px;
 }
 
 #project_name_row {
-  height: 30px;
-  line-height: 30px;
-  text-decoration: double;
-  font-weight: bold;
-  text-decoration: underline;
+	height: 30px;
+	line-height: 30px;
+	text-decoration: double;
+	font-weight: bold;
+	text-decoration: underline;
 }
 
 #left_side_nav,
 #main_container {
-  height: 100vh;
-  padding-top: 30px;
-  text-indent: 20px;
+	height: 100vh;
+	padding-top: 30px;
+	text-indent: 20px;
 }
 
 .left_nav_item {
-  display: block;
-  line-height: 2.5;
+	display: block;
+	line-height: 2.5;
 }
 
 .left_nav_item a:link {
-  text-decoration: none;
+	text-decoration: none;
 }
 
 .left_nav_item a:hover {
-  font-weight: bold;
+	font-weight: bold;
 }
 
 #edit_remove_btns {
-  text-align: right;
+	text-align: right;
 }
 
 #to_do_container {
-  position: relative;
-  background-color: lightgray;
-  height: 80vh;
-  margin-left: 5px;
-  margin-right: 5px;
-  text-align: center;
-  text-decoration: underline;
+	position: relative;
+	background-color: lightgray;
+	height: 80vh;
+	margin-left: 5px;
+	margin-right: 5px;
+	text-align: center;
+	text-decoration: underline;
 }
 
 #in_progress_container {
-  position: relative;
-  background-color: yellow;
-  height: 80vh;
-  margin-left: 5px;
-  margin-right: 5px;
-  text-align: center;
-  text-decoration: underline;
+	position: relative;
+	background-color: yellow;
+	height: 80vh;
+	margin-left: 5px;
+	margin-right: 5px;
+	text-align: center;
+	text-decoration: underline;
 }
 
 #done_container {
-  position: relative;
-  background-color: lightgreen;
-  height: 80vh;
-  margin-left: 5px;
-  margin-right: 5px;
-  text-align: center;
-  text-decoration: underline;
+	position: relative;
+	background-color: lightgreen;
+	height: 80vh;
+	margin-left: 5px;
+	margin-right: 5px;
+	text-align: center;
+	text-decoration: underline;
 }
 
 #task_container {
-  justify-content: center;
+	justify-content: center;
 }
 
 .modal-body {
-  text-align: left;
-  word-spacing: normal;
+	text-align: left;
+	word-spacing: normal;
 }
 
 .form-text {
-  margin-bottom: 0rem;
-  margin-top: 0rem;
-  padding: 0rem;
-  text-indent: initial;
+	margin-bottom: 0rem;
+	margin-top: 0rem;
+	padding: 0rem;
+	text-indent: initial;
 }
 
 .form-label {
-  margin-bottom: 0rem;
-  margin-top: 0rem;
+	margin-bottom: 0rem;
+	margin-top: 0rem;
 }
 
 .mb3 {
-  margin-top: 0rem;
-  margin-bottom: 0rem;
-  padding: 0rem;
+	margin-top: 0rem;
+	margin-bottom: 0rem;
+	padding: 0rem;
 }
 
 .text-indent-initial {
-  text-indent: -20px;
+	text-indent: -20px;
 }
 
 #main_container {
-  display: flex;
-  justify-content: space-between;
-  padding-right: 500px;
+	display: flex;
+	justify-content: space-between;
+	padding-right: 500px;
 }
 
 #main_container_tasks {
-  display: flex;
-  padding-right: 300px;
+	display: flex;
+	padding-right: 300px;
 }
 
 .card {
-  display: flex;
-  margin: 5px;
-  height: min-content;
+	display: flex;
+	margin: 5px;
+	height: min-content;
 }
 .container {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  justify-content: space-between;
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+	justify-content: space-between;
 }
 
 .row {
-  display: flex;
-  justify-content: space-between;
+	display: flex;
+	justify-content: space-between;
 }
 
 .btn-dark {
-  position: relative;
-  left: 485px;
+	position: relative;
+	left: 485px;
 }
 
 .dropdown {
-  margin-left: 230px;
+	margin-left: 230px;
 }
 
 .btn-container {
-  display: flex;
-  align-items: flex-end;
+	display: flex;
+	align-items: flex-end;
 }
 
 .btn-card-group {
-  margin-right: 5px;
+	margin-right: 5px;
 }
 
-.sidebar{
-  position: fixed;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 250px;
-  background-color: rgb(62, 67, 76);
-  padding: 6px 14px;
+.sidebar {
+	position: fixed;
+	top: 0;
+	left: 0;
+	height: 100%;
+	width: 250px;
+	background-color: rgb(62, 67, 76);
+	padding: 6px 14px;
 }
-.sidebar .collapsable{
-  color: white;
-  display: flex;
-  height: 50px;
-  width: 100%;
-  align-items: center;
-  font-size: 20px;
-  font-weight: bold;
-  margin-top: 30px;
+.sidebar .collapsable {
+	color: white;
+	display: flex;
+	height: 50px;
+	width: 100%;
+	align-items: center;
+	font-size: 20px;
+	font-weight: bold;
+	margin-top: 30px;
 }
-.sidebar #btn{
-  position:absolute;
-  top:40px;
-  color: white;
-  left: 85%;
-  font-size: 30px;
-  height: 50px;
-  width: 50px;
-  text-align: center;
-  line-height: 50px;
-  transform: translatex(-50%);
+.sidebar #btn {
+	position: absolute;
+	top: 40px;
+	color: white;
+	left: 85%;
+	font-size: 30px;
+	height: 50px;
+	width: 50px;
+	text-align: center;
+	line-height: 50px;
+	transform: translatex(-50%);
 }
-.sidebar ul{
-  margin-top:20px;
+.sidebar ul {
+	margin-top: 20px;
 }
-.sidebar ul li{
-  position: relative;
-  height:50px;
-  width: 100%;
-  margin: 0 5px;
-  list-style: none;
-  line-height: 50px;
-  border-radius: 10px;
-  font-size: 15px;
-  font-weight: bold;
-}
-
-.sidebar ul li .popup{
-  position: absolute;
-  left: 122px;
-  top: 0;
-  transform: translateY(-50%);
-  border-radius:6px;
-  height: 35px;
-  width: 122px;
-  background:whitesmoke;
-  line-height: 35px;
-  text-align: center;
-  box-shadow: 0px 5px 10px rgba(132, 139, 200, 0.18);
-  transition: 0s;
-  opacity: 0;
-  pointer-events: none;
-}
-.sidebar ul li:hover .popup{
-  transition: all .5s ease-in-out;
-  opacity: 1;
-  top:50%;
-}
-.sidebar ul li a{
-  color: white;
-  display: flex;
-  align-items: center;
-  text-decoration: none;
-  transition: all 0.5s ease-in-out;
+.sidebar ul li {
+	position: relative;
+	height: 50px;
+	width: 100%;
+	margin: 0 5px;
+	list-style: none;
+	line-height: 50px;
+	border-radius: 10px;
+	font-size: 15px;
+	font-weight: bold;
 }
 
-.sidebar ul li a:hover{
-  background:lightcoral;
-
+.sidebar ul li .popup {
+	position: absolute;
+	left: 122px;
+	top: 0;
+	transform: translateY(-50%);
+	border-radius: 6px;
+	height: 35px;
+	width: 122px;
+	background: whitesmoke;
+	line-height: 35px;
+	text-align: center;
+	box-shadow: 0px 5px 10px rgba(132, 139, 200, 0.18);
+	transition: 0s;
+	opacity: 0;
+	pointer-events: none;
 }
-sidebar ul li a i{
-  height:50px;
-  min-width: 50px;
-  border-radius: 12px;
-  line-height:50px;
-  text-align: center;
+.sidebar ul li:hover .popup {
+	transition: all 0.5s ease-in-out;
+	opacity: 1;
+	top: 50%;
+}
+.sidebar ul li a {
+	color: white;
+	display: flex;
+	align-items: center;
+	text-decoration: none;
+	transition: all 0.5s ease-in-out;
 }
 
+.sidebar ul li a:hover {
+	background: lightcoral;
+}
+.sidebar ul li a i {
+	height: 50px;
+	min-width: 50px;
+	border-radius: 12px;
+	line-height: 50px;
+	text-align: center;
+}
 
+table {
+	position: relative;
+	width: min-content;
+}
