--- a/Views/recycle_bin.ejs
+++ b/Views/recycle_bin.ejs
@@ -50,8 +50,8 @@
 
 			<div class="col-9" id="main_container">
 				<div class="table">
-					<table class="table">
-						<thead class="thead-light">
+					<table class="table table-striped table-bordered table-hover">
+						<thead class="thead-dark">
 							<tr>
 								<th scope="col">File name</th>
 								<th scope="col">Type</th>
